@@ -247,7 +247,7 @@ $signal = $dialog->signal_connect(
                     $dialog->get('current-scan-options')->get_data,
                     {
                         backend =>
-                          [ { $resolution => 52 }, { mode => 'Color' } ],
+                          [ { mode => 'Color' }, { $resolution => 52 } ],
                         'frontend' => { 'num_pages' => 0 }
                     },
                     'reset profile options'
