@@ -12,6 +12,7 @@
   (t/175_open_session2.t fails on i686: Long integer size is not compatible)
 * Convert all scans to PNG to allow tesseract to extract resolution
 * Ignore invalid options in profile
+* Ignore options in profile that are already correctly set
 * Update to Hungarian translation (thanks to csola)
 
 
